# cv-visualiser

./: Cargo.toml  README.md
.cargo/: config.toml
cv-collector/: Cargo.toml
cv-gui/: Cargo.toml  start_server.sh
cv-gui/docs/: cv_gui.js  cv_gui_bg.wasm  index.html
cv-gui/src/: app.rs  lib.rs  main.rs
cv-subscriber/: Cargo.toml  build.rs
cv-subscriber/.cargo/: config.toml
cv-subscriber/src/: lib.rs  server.rs  utils.rs  visitor.rs
demo/: Cargo.toml
proto/v1/: common.proto  protocol.proto
protos/v1/: common.proto  protocol.proto
