[package]
name = "cv-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.4"
prost-types = "0.10.1"
tonic = { version = "0.7.2", features = ["prost", "codegen", "transport"], default-features = false }

[build-dependencies]
tonic-build = "0.7.2"
