[package]
name = "cv-subscriber"
version = "0.1.0"
edition = "2018"

[dependencies]
nalgebra = { version = "0.28.0", features = ["serde-serialize"] }
ndarray = { version = "0.15.3", features = ["serde"] }
serde = { version = "1.0.127", features = ["derive"] }
tracing-core = "0.1.18"
tracing-subscriber = "0.2.19"

