[package]
name = "cv-subscriber"
version = "0.1.0"
edition = "2018"

[dependencies]
nalgebra = { version = "0.28.0", features = ["serde-serialize"] }
ndarray = { version = "0.15.3", features = ["serde"] }
prost = "0.10.4"
prost-types = "0.10.1"
serde = { version = "1.0.127", features = ["derive"] }
tokio = { version = "1.18.2", features = ["net", "sync", "time", "rt"] }
tonic = { version = "0.7.2", features = ["prost", "codegen", "transport"], default-features = false }
tracing-core = { version = "0.1.22", features = ["valuable"] }
tracing-subscriber = { version = "0.3.11", features = ["valuable"] }
valuable = { version = "0.1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.7.2"
